--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -3,17 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#0D1B2A"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#0D1B2A">
 
+    <ImageView
+        android:id="@+id/backButton"
+        android:layout_width="0dp"
+        android:layout_height="24dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:background="#0D1B2A"
+        android:src="@drawable/ic_back_arrow"
+        android:textColor="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/changePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:textColor="#FFFFFF"
         android:text="@string/change_password"
+        android:textColor="#FFFFFF"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,9 +38,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
-        android:textColor="#FFFFFF"
         android:backgroundTint="#354C61"
         android:text="@string/logout"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,8 +51,8 @@
         android:layout_marginEnd="3dp"
         android:layout_marginBottom="22dp"
         android:ems="10"
-        android:textColor="#FFFFFF"
         android:inputType="textPassword"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/newPass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/current" />
@@ -64,8 +76,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="3dp"
         android:ems="10"
-        android:textColor="#FFFFFF"
         android:inputType="textPassword"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/confirm"
         app:layout_constraintTop_toBottomOf="@+id/newPassword" />
@@ -75,8 +87,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="14dp"
-        android:textColor="#FFFFFF"
         android:text="@string/current_password"
+        android:textColor="#FFFFFF"
         app:layout_constraintBaseline_toBaselineOf="@+id/currentPassword"
         app:layout_constraintEnd_toStartOf="@+id/currentPassword"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -88,8 +100,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="255dp"
-        android:textColor="#FFFFFF"
         android:text="@string/new_password"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toStartOf="@+id/newPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -99,8 +111,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
-        android:textColor="#FFFFFF"
         android:text="@string/confirm_password"
+        android:textColor="#FFFFFF"
         app:layout_constraintBaseline_toBaselineOf="@+id/confirmPassword"
         app:layout_constraintEnd_toStartOf="@+id/confirmPassword"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -112,8 +124,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="100dp"
-        android:textColor="#FFFFFF"
         android:text="@string/notifications"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/confirmPassword"
         app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
 
@@ -122,9 +134,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:textColor="#FFFFFF"
         android:backgroundTint="#354C61"
         android:text="Change password"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/notifications"
         app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
 
