--- a/app/src/main/res/layout/create_group.xml
+++ b/app/src/main/res/layout/create_group.xml
@@ -5,11 +5,11 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#0D1B2A"
     android:paddingLeft="@dimen/fragment_horizontal_margin"
     android:paddingTop="@dimen/fragment_vertical_margin"
     android:paddingRight="@dimen/fragment_horizontal_margin"
     android:paddingBottom="@dimen/fragment_vertical_margin"
-    android:background="#0D1B2A"
     tools:context=".CreateGroup">
 
     <!--    <TextView-->
@@ -40,6 +40,18 @@
     <!--        app:layout_constraintStart_toStartOf="parent"-->
     <!--        app:layout_constraintTop_toTopOf="parent" />-->
 
+    <ImageView
+        android:id="@+id/backButton"
+        android:layout_width="0dp"
+        android:layout_height="24dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:background="#0D1B2A"
+        android:src="@drawable/ic_back_arrow"
+        android:textColor="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/GroupName_label"
@@ -48,8 +60,8 @@
         android:layout_marginTop="93dp"
         android:layout_marginBottom="69dp"
         android:text="@string/enter_group_name"
-        android:textSize="20sp"
         android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/selectMembers"
         app:layout_constraintEnd_toStartOf="@+id/enterGroupName"
         app:layout_constraintHorizontal_bias="0.0"
@@ -58,7 +70,6 @@
 
     <EditText
         android:id="@+id/enterGroupName"
-        android:textColor="#FFFFFF"
         android:layout_width="198dp"
         android:layout_height="58dp"
         android:layout_marginStart="24dp"
@@ -68,6 +79,7 @@
         android:hint="@string/enter_group_name"
         android:inputType="text"
         android:selectAllOnFocus="true"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,24 +87,24 @@
 
     <Button
         android:id="@+id/CreateGroupButton"
-        android:textColor="#FFFFFF"
-        android:backgroundTint="#354C61"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="124dp"
         android:layout_marginBottom="245dp"
+        android:backgroundTint="#354C61"
         android:text="@string/create_group"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/selectMembers"
-        android:textColor="#FFFFFF"
-        android:backgroundTint="#354C61"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="496dp"
+        android:backgroundTint="#354C61"
         android:text="select Group Members"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
