--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -8,6 +8,21 @@
     android:background="#0D1B2A"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/backButton"
+        android:layout_width="0dp"
+        android:layout_height="24dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="47dp"
+        android:background="#0D1B2A"
+        android:src="@drawable/ic_back_arrow"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toStartOf="@+id/linearLayout10"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/sign_up"
         android:layout_width="wrap_content"
@@ -40,11 +55,12 @@
         android:id="@+id/linearLayout10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="81dp"
+        android:layout_marginEnd="80dp"
         android:layout_marginBottom="49dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/backButton"
         app:layout_constraintTop_toBottomOf="@+id/imageView2">
 
         <TextView
@@ -65,11 +81,11 @@
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:textColor="#FFFFFF"
             android:layout_marginBottom="25dp"
             android:ems="10"
             android:inputType="text"
-             />
+            android:textColor="#FFFFFF" />
+
         <TextView
             android:id="@+id/email_label"
             android:layout_width="wrap_content"
@@ -83,60 +99,63 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView2"
             app:layout_constraintTop_toTopOf="@+id/email" />
+
         <EditText
             android:id="@+id/email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="1dp"
-            android:textColor="#FFFFFF"
             android:layout_marginBottom="24dp"
             android:ems="10"
             android:inputType="text"
-             />
+            android:textColor="#FFFFFF" />
+
         <TextView
             android:id="@+id/username_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:textColor="#FFFFFF"
             android:text="Username:"
+            android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/username"
             app:layout_constraintEnd_toStartOf="@+id/username"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView2"
             app:layout_constraintTop_toTopOf="@+id/username" />
+
         <EditText
             android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
             android:layout_marginBottom="33dp"
             android:ems="5"
             android:inputType="text"
-            />
+            android:textColor="#FFFFFF" />
+
         <TextView
             android:id="@+id/password_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:textColor="#FFFFFF"
             android:text="Password:"
+            android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/password"
             app:layout_constraintEnd_toStartOf="@+id/password"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/username"
             app:layout_constraintTop_toTopOf="@+id/password" />
+
         <EditText
             android:id="@+id/password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            android:textColor="#FFFFFF"
             android:ems="10"
             android:inputType="textPassword"
-             />
+            android:textColor="#FFFFFF" />
+
         <TextView
             android:id="@+id/confirm_password_label"
             android:layout_width="wrap_content"
@@ -156,21 +175,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:textColor="#FFFFFF"
             android:layout_marginBottom="30dp"
             android:ems="10"
             android:inputType="textPassword"
-            />
+            android:textColor="#FFFFFF" />
 
         <Button
             android:id="@+id/sign_up_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:backgroundTint="#354C61"
             android:layout_marginStart="43dp"
             android:layout_marginBottom="78dp"
-            android:text="Sign Up" />
+            android:backgroundTint="#354C61"
+            android:text="Sign Up"
+            android:textColor="#FFFFFF" />
 
     </LinearLayout>
 
