--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -127,7 +127,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@android:drawable/btn_star_big_on" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/temp_square_up_button"
         android:backgroundTint="#354C61"
         android:layout_width="0dp"
@@ -137,7 +137,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/add_expense_button"
         app:layout_constraintTop_toTopOf="@+id/add_expense_button"
-        app:srcCompat="@android:drawable/ic_menu_search" />
+        app:srcCompat="@drawable/square_up_logo"  />
 
     <ImageButton
         android:id="@+id/add_expense_button"
