--- a/app/src/main/res/layout/add_transaction.xml
+++ b/app/src/main/res/layout/add_transaction.xml
@@ -110,7 +110,7 @@
         app:layout_constraintTop_toBottomOf="@id/enterAmount" />
 
     <!-- New EditText for autofill message, above the Spinner -->
-    <EditText
+    <TextView
         android:id="@+id/autofill_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -143,7 +143,8 @@
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/selectGroupLabel" />
+        app:layout_constraintTop_toBottomOf="@id/selectGroupLabel"
+        android:spinnerMode="dialog"/>
 
 
     <Button
